Add about section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,13 @@ body {
   -webkit-text-stroke-color: currentColor;
 }
 
+#x-fill {
+  background-image: url("../assets/x.svg");
+  background-repeat: repeat;
+  background-size: cover;
+  background-size: 25% 25%;
+}
+
 @media (min-width: 768px) {
   #outline-title {
     -webkit-text-stroke-width: 2px;
